# kervignarc

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  Tableaux.xlsx  cahier-des-charges-design.md  cahier-des-charges-technique.md  cahier-des-charges-ux.md  cahier-des-charges.md  charge.docx  charge.md  guide-architecture.md  moteur-placement-lucky-loser.md
.claude/: settings.json
.claude/commands/: revue-us.md
.github/workflows/: ci.yml
backend/: alembic.ini  main.py  pyproject.toml  requirements.txt  run_dev.py
backend/api/: __init__.py  dependances.py  erreurs.py  health.py  realtime.py  spa.py
backend/api/v1/: __init__.py  audit.py  auth.py  bareme_qualification.py  blasons.py  categories.py  clubs.py  competition.py  completude.py  departs.py  deroule.py  documents_salle.py  feuille_de_marque.py  gabarits.py  grain_validation.py  inscriptions.py  paiements.py  placement.py  postes.py  saisie.py  scoreurs.py  supervision.py  tournois.py
backend/application/: __init__.py  archers.py  audit.py  auth.py  bareme_qualification.py  blasons.py  categories.py  classements.py  clubs.py  completude.py  departs.py  documents_salle.py  erreurs.py  feuille_de_marque.py  gabarits.py  grain_validation.py  inscriptions.py  paiements.py  placement.py  postes.py  referentiel_ffta.py  saisie.py  scoreurs.py  supervision.py  tournois.py
backend/bootstrap/: __init__.py  composition.py
backend/domain/: __init__.py  archer.py  bareme.py  blason.py  categorie.py  classement.py  club.py  completude.py  depart.py  documents_salle.py  doublons.py  entree_audit.py  erreurs.py  feuille_marque.py  gabarit_salle.py  grain_validation.py  impact.py  inscription.py  paiement.py  phase.py  placement.py  ports.py  poste.py  score.py  scoreur.py  serie.py  supervision.py  tournoi.py
backend/infrastructure/: __init__.py  erreurs.py  horloge.py  idempotence.py
backend/infrastructure/auth/: __init__.py  config.py  identifiants.py  sessions.py
backend/infrastructure/db/: __init__.py  base.py  config.py  engine.py  models.py  repositories.py  write_queue.py
backend/infrastructure/pdf/: __init__.py  documents_salle.py  feuille_de_marque.py
backend/infrastructure/postes/: __init__.py  codes.py  presence.py  sessions.py
backend/infrastructure/realtime/: __init__.py  broadcaster.py
backend/infrastructure/scoreurs/: __init__.py  codes.py  sessions.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initiale.py  0002_tournoi.py  0003_archer_score.py  0004_tournoi_metadonnees.py  0005_tournoi_statut.py  0006_categorie.py  0007_blason.py  0008_categorie_blason_id.py  0009_gabarit_salle.py  0010_gabarit_tournoi.py  0011_phase.py  0012_tournoi_tarif_depart.py  0013_club.py  0014_archer_club_id.py  0015_archer_inscription.py  0016_depart.py  0017_inscription.py  0018_categorie_ages.py  0019_blason_zones.py  0020_categorie_hauteur_centre.py  0020_depart_quota.py  0021_depart_quota.py  0022_placement.py  0023_scoreur.py  0024_poste.py  0025_entree_audit.py  0026_serie_volee.py  0027_volee_created_at.py
backend/tests/: conftest.py  test_acces_public.py  test_admin_credentials_store.py  test_archer_score_repository.py  test_audit_api.py  test_audit_repository.py  test_auth_api.py  test_bareme_qualification_api.py  test_blason_repository.py  test_blasons_api.py  test_broadcaster.py  test_categorie_repository.py  test_categories_api.py  test_club_repository.py  test_clubs_api.py  test_competition_api.py  test_completude_api.py  test_db_connexion.py  test_depart_repository.py  test_departs_api.py  test_deroule_api.py  test_documents_salle_api.py  test_documents_salle_reportlab.py  test_domain_archer.py  test_domain_bareme.py  test_domain_blason.py  test_domain_categorie.py  test_domain_classement.py  test_domain_club.py  test_domain_completude.py  test_domain_depart.py  test_domain_doublons.py  test_domain_entree_audit.py  test_domain_gabarit_salle.py  test_domain_grain_validation.py  test_domain_impact.py  test_domain_inscription.py  test_domain_isolation.py  test_domain_paiement.py  test_domain_phase.py  (+62 more)
docs/: dependances.md  dette.md  glossaire.md  modele-de-donnees.md  referentiel-ffta.md
docs/adr/: 0001-adopter-les-adr.md  0002-stack-et-topologie.md  0003-architecture-hexagonale.md  0004-moteur-de-phases-politiques.md  0005-async-et-sqlite.md  0006-ubiquitous-language.md  0007-erreurs-par-couche.md  0008-outillage-npm-venv.md  0009-gouvernance-dependances.md  0010-unite-de-travail-transactionnelle.md  0011-phase-qualification-anticipee.md  0012-argent-en-centimes-entiers.md  0013-conduite-de-la-revue-d-us.md  0014-club-inconnu-plutot-que-club-sentinelle.md  0017-le-depart-est-un-creneau-du-tournoi.md  (+28 more)
epics/: EPIC-00-socle-technique.md  EPIC-01-configuration-tournoi.md  EPIC-02-inscriptions.md  EPIC-03-placement.md  EPIC-04-saisie-scores.md  EPIC-05-moteur-phases.md  EPIC-06-classements.md  EPIC-07-affichage-public.md  EPIC-08-paiements.md  EPIC-09-exports.md  EPIC-10-acces-roles.md  EPIC-11-exploitation.md  EPIC-12-pilotage-jour-j.md  EPIC-13-equipes.md  README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
journal-d-avancement/: 00-resume-projet.md  2026-07-20-00h12-etat-des-lieux.md  2026-07-20-00h35-saisie-resiste-aux-coupures.md  2026-07-21-22h10-choisir-son-role-au-lancement.md  2026-07-22-00h40-completude-du-tournoi.md  2026-07-22-14h39-rechercher-un-archer.md  2026-07-22-17h32-detecter-fusionner-doublons.md  README.md  SUIVI-US.md
prototype/: README.md  blason.py  bracket.py  cible.py  classement.py  main.py  match.py  organisation.py  player.py  round.py  tableau.py  testperso.py  tournament_generator.py  tournament_tree.py  tree_principale.py
stories/: E00-socle.md  E01-configuration.md  E02-inscriptions.md  E03-placement.md  E04-saisie-scores.md  E05-moteur-phases.md  E06-classements.md  E07-affichage-public.md  E08-paiements.md  E09-exports.md  E10-acces-roles.md  E11-exploitation.md  E12-pilotage-jour-j.md  E13-equipes.md  README.md
(+180 files in other folders)
