[project]
name = "kervignarc-backend"
version = "0.1.0"
description = "Backend FastAPI — gestion de tournoi de tir à l'arc en salle (18 m)"
requires-python = ">=3.13"
# Source de vérité des dépendances Python (cf. guide-architecture.md §3, ADR-0008).
# requirements.txt est régénéré depuis cet environnement (pip freeze), jamais édité à la main.
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.51.0",
    # Persistance (E00US006) : accès SQLite synchrone + migrations (guide §7, ADR-0005).
    "sqlalchemy==2.0.51",
    "alembic==1.18.5",
]

[project.optional-dependencies]
# Outils de qualité (E00US002) : lint/format (ruff), typage strict (mypy), tests (pytest),
# hooks pre-commit. Versions épinglées ; reflétées dans requirements.txt.
dev = [
    "ruff==0.8.6",
    "mypy==1.14.1",
    "pytest==9.1.1",
    "httpx==0.28.1",
    "pre-commit==4.0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["domain*", "application*", "infrastructure*", "api*", "bootstrap*"]

# ---------------------------------------------------------------------------
# Qualité (E00US002) — cf. guide-architecture.md §5
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["."]

[tool.ruff.lint]
# Sélection raisonnable : erreurs (E/F), imports (I), pyupgrade (UP), bugbears (B),
# simplifications (SIM), conventions de nommage (N), compréhensions (C4), règles ruff (RUF).
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4", "RUF"]
# N818 (suffixe `Error` sur les exceptions) désactivé : le projet nomme ses exceptions
# en langue métier française, sans suffixe (ADR-0007 : `PlacementInvalide`, `TournoiIntrouvable`…).
ignore = ["N818"]

[tool.ruff.format]
# Défauts ruff (compatibles Black) : guillemets doubles, indentation espaces.

[tool.mypy]
python_version = "3.13"
files = ["."]
# Scripts de migration Alembic (env.py + versions/) : générés/scriptés, hors typage strict.
exclude = ['(^|/)migrations/']
strict = true
# Confort : messages localisés/lisibles.
pretty = true
show_error_codes = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
