[project]
name = "kervignarc-backend"
version = "0.1.0"
description = "Backend FastAPI — gestion de tournoi de tir à l'arc en salle (18 m)"
requires-python = ">=3.13"
# Source de vérité des dépendances Python (cf. guide-architecture.md §3, ADR-0008).
# requirements.txt est régénéré depuis cet environnement (pip freeze), jamais édité à la main.
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.51.0",
    # Persistance (E00US006) : accès SQLite synchrone + migrations (guide §7, ADR-0005).
    "sqlalchemy==2.0.51",
    "alembic==1.18.5",
    # Génération PDF (E09US001) : socle des documents imprimables — wheels autoportantes,
    # aucune dépendance native, embarquable dans PyInstaller (QT3 tranchée, ADR-0031).
    "reportlab==5.0.0",
]

[project.optional-dependencies]
# Outils de qualité (E00US002) : lint/format (ruff), typage strict (mypy), tests (pytest),
# hooks pre-commit. Versions épinglées ; reflétées dans requirements.txt.
dev = [
    "ruff==0.8.6",
    "mypy==1.14.1",
    "pytest==9.1.1",
    "httpx==0.28.1",
    "pre-commit==4.0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["domain*", "application*", "infrastructure*", "api*", "bootstrap*"]

# ---------------------------------------------------------------------------
# Qualité (E00US002) — cf. guide-architecture.md §5
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["."]

[tool.ruff.lint]
# Sélection raisonnable : erreurs (E/F), imports (I), pyupgrade (UP), bugbears (B),
# simplifications (SIM), conventions de nommage (N), compréhensions (C4), règles ruff (RUF).
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4", "RUF"]
# N818 (suffixe `Error` sur les exceptions) désactivé : le projet nomme ses exceptions
# en langue métier française, sans suffixe (ADR-0007 : `PlacementInvalide`, `TournoiIntrouvable`…).
ignore = ["N818"]

[tool.ruff.format]
# Défauts ruff (compatibles Black) : guillemets doubles, indentation espaces.

[tool.mypy]
python_version = "3.13"
files = ["."]
# Scripts de migration Alembic (env.py + versions/) : générés/scriptés, hors typage strict.
exclude = ['(^|/)migrations/']
strict = true
# Confort : messages localisés/lisibles.
pretty = true
show_error_codes = true
warn_unreachable = true

# ReportLab (E09US001, ADR-0031) ne publie ni marqueur `py.typed` ni stubs : mypy strict refuserait
# l'import non typé. On tolère l'absence de types **pour cette lib tierce uniquement** — la rigueur
# sur notre propre code (dont l'adapter `infrastructure/pdf/`) reste entière. Pas de paquet de stubs
# ajouté (règle 11) : `types-reportlab` n'est pas officiel, l'`ignore_missing_imports` ciblé suffit.
[[tool.mypy.overrides]]
module = ["reportlab.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
